fixed for CHLK-2956 Teacher. Discipline. In the tooltip the upper infractions will be cut off

--- a/Chalkable.Web/assets/sass/screen.scss
+++ b/Chalkable.Web/assets/sass/screen.scss
@@ -212,7 +212,8 @@ img{
     padding: 3px 5px;
     line-height: 15px;
     max-width: 150px;
-    //word-break: break-all;
+    white-space: pre-wrap;
+    text-align: left;
   }
 
   .tooltip-triangle {
